# LUMO-Term

./: .gitignore  ARCHITECTURE.md  IMPROVEMENTS.md  INSTALL.md  LICENSE  README.md  pyproject.toml  setup.sh
lumo_term/: __init__.py  __main__.py  auth.py  browser.py  cli.py  config.py  extract.py  logging.py  ui.py
tests/: __init__.py  conftest.py  test_auth.py  test_browser.py  test_cli.py  test_config.py  test_conversation.py  test_logging.py  test_output_validation.py  test_performance.py  test_security.py  test_ui.py
