[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumo-term"
version = "0.1.0"
description = "Terminal client for Proton LUMO+ AI assistant"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "selenium>=4.15",
    "webdriver-manager>=4.0",
    "textual>=0.50",
    "rich>=13",
    "pydantic>=2",
]

[project.scripts]
lumo = "lumo_term.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require network access",
    "persistence: marks tests for conversation persistence",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
